--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
-		"test": "react-scripts test --coverage",
-		"eject": "react-scripts eject"
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"prepare": "husky install"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -45,11 +46,18 @@
 		]
 	},
 	"devDependencies": {
-		"msw": "^0.29.0"
+		"msw": "^0.29.0",
+		"husky": "^6.0.0"
 	},
 	"jest": {
 		"transformIgnorePatterns": [
 			"/node_modules/(?!antd|@ant-design|rc-.+?|@babel/runtime).+(js|jsx)$"
 		]
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "npm run test",
+			"pre-push": "npm test"
+		}
 	}
 }
